# BeamTestEpicTof

./: .gitignore  CMakeLists.txt  README.md  envSet.sh
TofClustering/: CMakeLists.txt  TofCluPlugin.cc  compile.sh
TofClustering/EICrecon_MY/lib/: libtestBeamACLGAD.components
TofClustering/EICrecon_MY/share/geometry/: btTOF.xml
TofClustering/analysis/: Run  compile.C  compile.sh  trackEventDisplay.C
TofClustering/geometry/: btTOF.xml  testBeamACLGAD.xml
TofClustering/reco/: CMakeLists.txt  LGADHitCalibration_beamTest.cc  LGADHitCalibration_beamTest_factory.h  LGADHitClustering_beamTest.cc  LGADHitClustering_beamTest.h  LGADTrack_beamTest.cc  LGADTrack_beamTest.h
analysis/: trackEventDisplay.h
geometry/: CMakeLists.txt  testBeamACLGAD_geo.cpp
reco/: CMakeLists.txt  LGADBeamTestPlugin.cc  LGADHitCalibrationConfig_beamTest.h  LGADHitCalibration_beamTest.cc  LGADHitCalibration_beamTest.h  LGADHitClusteringConfig_beamTest.h  LGADHitClustering_beamTest.cc  LGADHitClustering_beamTest.h  LGADHitClustering_beamTest_factory.h  LGADTrackConfig_beamTest.h  LGADTrack_beamTest.cc  LGADTrack_beamTest_factory.h
